fixing missing colour code for button text

--- a/public/css/caredove-public.css
+++ b/public/css/caredove-public.css
@@ -67,6 +67,7 @@ button.caredove-button-solid, input[type="button"].caredove-button-solid, .cared
     border-width:2px;
     border-style:solid;
     border-color:#00A4FF;
+    color:#ffffff;
 }
  
 .caredove-listings {
